--- a/index.html
+++ b/index.html
@@ -5,12 +5,99 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cricket</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="field">
-        <img class="bat" src="image/bat.png" alt="">
-        <div class="ball"></div>
-    </div>
+    <!-- bat box-animation -->
+    <section class="field-animation">
+        <div class="field">
+            <img class="bat" src="image/bat.png" alt="">
+            <div class="ball"></div>
+        </div>
+    </section>
+    <!-- ball animation -->
+    <section class="box-animation">
+        <div class="inner">
+            <div class="soft-ball"></div>
+            <div class="hard-ball"></div>
+            <div class="round-ball"></div>
+        </div>
+    </section>
+    <!-- flex login form -->
+    <section>
+        <nav>
+            <span>
+                <a href="">Home</a>
+                <a href="">Services</a>
+                <a href="">About</a>
+                <a href="">Contact</a>
+            </span>
+            <span>
+                <a href=""><i class="fas fa-sign-out-alt"></i></a>
+                <a href=""><i class="fas fa-user"></i></a>
+            </span>
+        </nav>
+    </section>
+    <section>
+        <div class="login-form">
+            <form action="" class="login-detail">
+                <h1>Login Form</h1>
+                <input type="email" name="email" placeholder="Enter your E-mail" id="">
+                <input type="password" name="password" placeholder="Enter your password" id="">
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </section>
+    <!-- clander by grid -->
+    <section>
+        <div class="calendar-title">
+            <h1>Google Calendar</h1>
+        </div>
+        <div class="clender">
+            <div class="day">S</div>
+            <div class="day">M</div>
+            <div class="day">T</div>
+            <div class="day">W</div>
+            <div class="day">T</div>
+            <div class="day">F</div>
+            <div class="day">S</div>
+            <div class="date pevious">29</div>
+            <div class="date pevious">30</div>
+            <div class="date pevious">31</div>
+            <div class="date">1</div>
+            <div class="date">2</div>
+            <div class="date">3</div>
+            <div class="date">4</div>
+            <div class="date">5</div>
+            <div class="date">6</div>
+            <div class="date">7</div>
+            <div class="date">8</div>
+            <div class="date">9</div>
+            <div class="date">10</div>
+            <div class="date">11</div>
+            <div class="date">12</div>
+            <div class="date">13</div>
+            <div class="date">14</div>
+            <div class="date">15</div>
+            <div class="date">16</div>
+            <div class="date">17</div>
+            <div class="date">18</div>
+            <div class="date">19</div>
+            <div class="date">20</div>
+            <div class="date">21</div>
+            <div class="date">22</div>
+            <div class="date">23</div>
+            <div class="date">24</div>
+            <div class="date">25</div>
+            <div class="date">26</div>
+            <div class="date">27</div>
+            <div class="date">28</div>
+            <div class="date">29</div>
+            <div class="date">30</div>
+            <div class="date pevious">1</div>
+            <div class="date pevious">2</div>
+        </div>
+    </section>
 </body>
 </html>
