--- a/index.html
+++ b/index.html
@@ -99,5 +99,121 @@
             <div class="date pevious">2</div>
         </div>
     </section>
+    <!-- image gallery by flexBox -->
+    <section>
+        <div class="calendar-title">
+            <h1>Photo Album</h1>
+        </div>
+        <div class="gallery-album">
+            <div class="gellary">
+                <div class="gallary-image">
+                    <img src="image/lion.png" alt="">
+                </div>
+                <div class="gallary-description">
+                    <h3>Tiger Mama</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste maiores molestiae cumque, reprehenderit omnis molestias obcaecati exercitationem nemo laborum facilis at deserunt dolorum vitae incidunt est ipsa, ullam reiciendis quis.</p>
+                </div>
+            </div>
+            <div class="gellary">
+                <div class="gallary-image">
+                    <img src="image/lion.png" alt="">
+                </div>
+                <div class="gallary-description">
+                    <h3>Tiger Mama</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste maiores molestiae cumque, reprehenderit omnis molestias obcaecati exercitationem nemo laborum facilis at deserunt dolorum vitae incidunt est ipsa, ullam reiciendis quis.</p>
+                </div>
+            </div>
+            <div class="gellary">
+                <div class="gallary-image">
+                    <img src="image/lion.png" alt="">
+                </div>
+                <div class="gallary-description">
+                    <h3>Tiger Mama</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste maiores molestiae cumque, reprehenderit omnis molestias obcaecati exercitationem nemo laborum facilis at deserunt dolorum vitae incidunt est ipsa, ullam reiciendis quis.</p>
+                </div>
+            </div>
+            <div class="gellary">
+                <div class="gallary-image">
+                    <img src="image/lion.png" alt="">
+                </div>
+                <div class="gallary-description">
+                    <h3>Tiger Mama</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste maiores molestiae cumque, reprehenderit omnis molestias obcaecati exercitationem nemo laborum facilis at deserunt dolorum vitae incidunt est ipsa, ullam reiciendis quis.</p>
+                </div>
+            </div>
+            <div class="gellary">
+                <div class="gallary-image">
+                    <img src="image/lion.png" alt="">
+                </div>
+                <div class="gallary-description">
+                    <h3>Tiger Mama</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste maiores molestiae cumque, reprehenderit omnis molestias obcaecati exercitationem nemo laborum facilis at deserunt dolorum vitae incidunt est ipsa, ullam reiciendis quis.</p>
+                </div>
+            </div>
+            <div class="gellary">
+                <div class="gallary-image">
+                    <img src="image/lion.png" alt="">
+                </div>
+                <div class="gallary-description">
+                    <h3>Tiger Mama</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste maiores molestiae cumque, reprehenderit omnis molestias obcaecati exercitationem nemo laborum facilis at deserunt dolorum vitae incidunt est ipsa, ullam reiciendis quis.</p>
+                </div>
+            </div>
+            <div class="gellary">
+                <div class="gallary-image">
+                    <img src="image/lion.png" alt="">
+                </div>
+                <div class="gallary-description">
+                    <h3>Tiger Mama</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste maiores molestiae cumque, reprehenderit omnis molestias obcaecati exercitationem nemo laborum facilis at deserunt dolorum vitae incidunt est ipsa, ullam reiciendis quis.</p>
+                </div>
+            </div>
+            <div class="gellary">
+                <div class="gallary-image">
+                    <img src="image/lion.png" alt="">
+                </div>
+                <div class="gallary-description">
+                    <h3>Tiger Mama</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste maiores molestiae cumque, reprehenderit omnis molestias obcaecati exercitationem nemo laborum facilis at deserunt dolorum vitae incidunt est ipsa, ullam reiciendis quis.</p>
+                </div>
+            </div>
+            <div class="gellary">
+                <div class="gallary-image">
+                    <img src="image/lion.png" alt="">
+                </div>
+                <div class="gallary-description">
+                    <h3>Tiger Mama</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste maiores molestiae cumque, reprehenderit omnis molestias obcaecati exercitationem nemo laborum facilis at deserunt dolorum vitae incidunt est ipsa, ullam reiciendis quis.</p>
+                </div>
+            </div>
+            <div class="gellary">
+                <div class="gallary-image">
+                    <img src="image/lion.png" alt="">
+                </div>
+                <div class="gallary-description">
+                    <h3>Tiger Mama</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste maiores molestiae cumque, reprehenderit omnis molestias obcaecati exercitationem nemo laborum facilis at deserunt dolorum vitae incidunt est ipsa, ullam reiciendis quis.</p>
+                </div>
+            </div>
+            <div class="gellary">
+                <div class="gallary-image">
+                    <img src="image/lion.png" alt="">
+                </div>
+                <div class="gallary-description">
+                    <h3>Tiger Mama</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste maiores molestiae cumque, reprehenderit omnis molestias obcaecati exercitationem nemo laborum facilis at deserunt dolorum vitae incidunt est ipsa, ullam reiciendis quis.</p>
+                </div>
+            </div>
+            <div class="gellary">
+                <div class="gallary-image">
+                    <img src="image/lion.png" alt="">
+                </div>
+                <div class="gallary-description">
+                    <h3>Tiger Mama</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste maiores molestiae cumque, reprehenderit omnis molestias obcaecati exercitationem nemo laborum facilis at deserunt dolorum vitae incidunt est ipsa, ullam reiciendis quis.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
